fix(nav-bar): fixed alignment of elements, search-field now is always in the center

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -47,7 +47,7 @@ nav {
     top: 0;
     min-height: 50px;
     width: 100%;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     align-items: center;
     background-color: rgb(20, 20, 20);
 }
@@ -113,16 +113,28 @@ nav {
     color: red;
 }
 
-.nav-center {
+.nav-bar-right {
     display: flex;
-    justify-content: center; /* Center the elements inside this container */
+    justify-content: left; /* Center the elements inside this container */
     align-content: center;
-    flex-grow: 1; /* Allow this container to take up remaining space */
+    width: 100%;
+    /*flex-grow: 1;  Allow this container to take up remaining space */
+}
+
+.nav-bar-left {
+    display: flex;
+    justify-content: right; /* Center the elements inside this container */
+    align-content: center;
+    width: 100%;
+    /*flex-grow: 1;  Allow this container to take up remaining space */
 }
 
 .auth-buttons {
+    position: absolute;
+    right: 10px;
+    top: 8px;
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     gap: 20px;
     padding-left: 40px;
     padding-right: 40px;
